{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 75,
  "lineage": "8febcfdc-e955-b7e2-0474-f7b79e5cc134",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:249154229579:listener/app/mgt-alb-staging/9bfa78302cbde42a/ebbd4826140e726d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:249154229579:targetgroup/mgt-tg-staging/2b5eae295bb70c7f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:249154229579:listener/app/mgt-alb-staging/9bfa78302cbde42a/ebbd4826140e726d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:249154229579:loadbalancer/app/mgt-alb-staging/9bfa78302cbde42a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.alb.aws_alb_target_group.main",
            "module.alb.aws_lb.main",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:249154229579:targetgroup/mgt-tg-staging/2b5eae295bb70c7f",
            "arn_suffix": "targetgroup/mgt-tg-staging/2b5eae295bb70c7f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/env/check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:249154229579:targetgroup/mgt-tg-staging/2b5eae295bb70c7f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mgt-tg-staging",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "mgt-tg-staging"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "mgt-tg-staging"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0698e8a6d2b45ea27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:249154229579:loadbalancer/app/mgt-alb-staging/9bfa78302cbde42a",
            "arn_suffix": "app/mgt-alb-staging/9bfa78302cbde42a",
            "dns_name": "mgt-alb-staging-1976595048.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:249154229579:loadbalancer/app/mgt-alb-staging/9bfa78302cbde42a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mgt-alb-staging",
            "security_groups": [
              "sg-01cd22427ac23f210"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07ad060911a46d802"
              },
              {
                "subnet_id": "subnet-0e846b3f1ce85878c"
              }
            ],
            "subnets": [
              "subnet-07ad060911a46d802",
              "subnet-0e846b3f1ce85878c"
            ],
            "tags": {
              "Environment": "staging",
              "Name": "mgt-alb-staging"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "mgt-alb-staging"
            },
            "vpc_id": "vpc-0698e8a6d2b45ea27",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:security-group/sg-01cd22427ac23f210",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01cd22427ac23f210",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mgt-sg-alb-staging",
            "name_prefix": "",
            "owner_id": "249154229579",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "mgt-sg-alb-staging"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "mgt-sg-alb-staging"
            },
            "timeouts": null,
            "vpc_id": "vpc-0698e8a6d2b45ea27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-task-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:security-group/sg-0fe4a7c58657683b2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe4a7c58657683b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              }
            ],
            "name": "mgt-sg-task-staging",
            "name_prefix": "",
            "owner_id": "249154229579",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "mgt-sg-task-staging"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "mgt-sg-task-staging"
            },
            "timeouts": null,
            "vpc_id": "vpc-0698e8a6d2b45ea27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02a55dd7b432b94da",
            "domain": "vpc",
            "id": "eipalloc-0968bd2e0a05dbc39",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0e9567e50a3bb185a",
            "private_dns": "ip-10-0-0-72.us-east-2.compute.internal",
            "private_ip": "10.0.0.72",
            "public_dns": "ec2-18-117-14-238.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.14.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "Name": "mgt-eip-staging-001"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "mgt-eip-staging-001"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-020e995f3e98ef36b",
            "domain": "vpc",
            "id": "eipalloc-06994516db59a1ff9",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0cfc96888a46f27d8",
            "private_dns": "ip-10-0-1-173.us-east-2.compute.internal",
            "private_ip": "10.0.1.173",
            "public_dns": "ec2-13-59-226-74.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.226.74",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "Name": "mgt-eip-staging-002"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "mgt-eip-staging-002"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:internet-gateway/igw-0b1af1b37a15ab806",
            "id": "igw-0b1af1b37a15ab806",
            "owner_id": "249154229579",
            "tags": {
              "Environment": "staging",
              "Name": "mgt-igw-staging"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "mgt-igw-staging"
            },
            "vpc_id": "vpc-0698e8a6d2b45ea27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0968bd2e0a05dbc39",
            "connectivity_type": "public",
            "id": "nat-0282e70f410e611ab",
            "network_interface_id": "eni-0e9567e50a3bb185a",
            "private_ip": "10.0.0.72",
            "public_ip": "18.117.14.238",
            "subnet_id": "subnet-07ad060911a46d802",
            "tags": {
              "Environment": "staging",
              "Name": "mgt-nat-staging-001"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "mgt-nat-staging-001"
            }
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06994516db59a1ff9",
            "connectivity_type": "public",
            "id": "nat-05c2f621c7f01d178",
            "network_interface_id": "eni-0cfc96888a46f27d8",
            "private_ip": "10.0.1.173",
            "public_ip": "13.59.226.74",
            "subnet_id": "subnet-0e846b3f1ce85878c",
            "tags": {
              "Environment": "staging",
              "Name": "mgt-nat-staging-002"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "mgt-nat-staging-002"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_eip.nat"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0db73acb805a662511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0282e70f410e611ab",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0db73acb805a66251",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e4e19da6d692e9ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05c2f621c7f01d178",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e4e19da6d692e9ce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b1af1b37a15ab806",
            "id": "r-rtb-0519ee9678d6e10f41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0519ee9678d6e10f4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:route-table/rtb-0db73acb805a66251",
            "id": "rtb-0db73acb805a66251",
            "owner_id": "249154229579",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0282e70f410e611ab",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "mgt-routing-table-private-001"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "mgt-routing-table-private-001"
            },
            "vpc_id": "vpc-0698e8a6d2b45ea27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:route-table/rtb-0e4e19da6d692e9ce",
            "id": "rtb-0e4e19da6d692e9ce",
            "owner_id": "249154229579",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05c2f621c7f01d178",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "mgt-routing-table-private-002"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "mgt-routing-table-private-002"
            },
            "vpc_id": "vpc-0698e8a6d2b45ea27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:route-table/rtb-0519ee9678d6e10f4",
            "id": "rtb-0519ee9678d6e10f4",
            "owner_id": "249154229579",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b1af1b37a15ab806",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "mgt-routing-table-public"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "mgt-routing-table-public"
            },
            "vpc_id": "vpc-0698e8a6d2b45ea27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0475209d1cbe18ebd",
            "route_table_id": "rtb-0db73acb805a66251",
            "subnet_id": "subnet-09fc3a94f9127c22c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e6e5e981cf6cbd8",
            "route_table_id": "rtb-0e4e19da6d692e9ce",
            "subnet_id": "subnet-02bb0ddc9821489b7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0975e864c18bf7784",
            "route_table_id": "rtb-0519ee9678d6e10f4",
            "subnet_id": "subnet-07ad060911a46d802"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_route_table.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043bcefd91bc88208",
            "route_table_id": "rtb-0519ee9678d6e10f4",
            "subnet_id": "subnet-0e846b3f1ce85878c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:subnet/subnet-09fc3a94f9127c22c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.50.0/24",
            "id": "subnet-09fc3a94f9127c22c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "249154229579",
            "tags": {
              "Environment": "staging",
              "Name": "mgt-private-subnet-staging-001"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "mgt-private-subnet-staging-001"
            },
            "vpc_id": "vpc-0698e8a6d2b45ea27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:subnet/subnet-02bb0ddc9821489b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.51.0/24",
            "id": "subnet-02bb0ddc9821489b7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "249154229579",
            "tags": {
              "Environment": "staging",
              "Name": "mgt-private-subnet-staging-002"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "mgt-private-subnet-staging-002"
            },
            "vpc_id": "vpc-0698e8a6d2b45ea27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:subnet/subnet-07ad060911a46d802",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-07ad060911a46d802",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "249154229579",
            "tags": {
              "Environment": "staging",
              "Name": "mgt-public-subnet-staging-001"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "mgt-public-subnet-staging-001"
            },
            "vpc_id": "vpc-0698e8a6d2b45ea27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:subnet/subnet-0e846b3f1ce85878c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e846b3f1ce85878c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "249154229579",
            "tags": {
              "Environment": "staging",
              "Name": "mgt-public-subnet-staging-002"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "mgt-public-subnet-staging-002"
            },
            "vpc_id": "vpc-0698e8a6d2b45ea27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:vpc/vpc-0698e8a6d2b45ea27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-046ba5c0f34d2b404",
            "default_route_table_id": "rtb-00ee7b5f62d0e968d",
            "default_security_group_id": "sg-0435fea3f10a76b7f",
            "dhcp_options_id": "dopt-d25b4aba",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0698e8a6d2b45ea27",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00ee7b5f62d0e968d",
            "owner_id": "249154229579",
            "tags": {
              "Environment": "staging",
              "Name": "mgt-vpc-staging"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "mgt-vpc-staging"
            }
          }
        }
      ]
    }
  ]
}